2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/11_ifAffect.deca
// Description:
//    Programme  if dont la condition est une chaine de caractère  puie un seul else if puis un else.
//
// Resultats:
//      programme correcte syntaxiquement mais invalide contextuelement 
//    affiche : je suis dans else
//
// Historique:
//    cree le 09/01/2024
{
    
    int x=0, z=4;
    if(x == x+z)
    {
        print("je suis dans if");
    }else if(x == x-z)
    {
        x = z;
    }
    else{
        print("hello je suis else");
        
    }
}